new-vpc/route_table.tf
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.this.id
  }

  tags = merge(
    var.default_tags,
    { "Name" = "${local.tag_name_prefix}-Private-RT" }
  )
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }

  tags = merge(
    var.default_tags,
    { "Name" = "${local.tag_name_prefix}-Public-RT" }
  )
}
